Added SQL Table

--- a/StateNames.ipynb
+++ b/StateNames.ipynb
@@ -2,28 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6f268497",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "e5605338",
+   "id": "c0a00603",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"StateNames.csv\")"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func\n",
+    "\n",
+    "from flask import Flask, jsonify"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f0605926",
+   "id": "b58d517f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"20221107_topbabynames.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a9831eb2",
    "metadata": {},
    "outputs": [
     {
@@ -47,74 +56,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Name</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>State</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Name</th>\n",
        "      <th>Count</th>\n",
+       "      <th>Data_Revision_Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Female</td>\n",
        "      <td>1</td>\n",
-       "      <td>Mary</td>\n",
-       "      <td>1910</td>\n",
-       "      <td>F</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>14</td>\n",
+       "      <td>SUSAN</td>\n",
+       "      <td>3299</td>\n",
+       "      <td>11/07/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Female</td>\n",
        "      <td>2</td>\n",
-       "      <td>Annie</td>\n",
-       "      <td>1910</td>\n",
-       "      <td>F</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>12</td>\n",
+       "      <td>MARY</td>\n",
+       "      <td>3248</td>\n",
+       "      <td>11/07/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Female</td>\n",
        "      <td>3</td>\n",
-       "      <td>Anna</td>\n",
-       "      <td>1910</td>\n",
-       "      <td>F</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>10</td>\n",
+       "      <td>KAREN</td>\n",
+       "      <td>3156</td>\n",
+       "      <td>11/07/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Female</td>\n",
        "      <td>4</td>\n",
-       "      <td>Margaret</td>\n",
-       "      <td>1910</td>\n",
-       "      <td>F</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>8</td>\n",
+       "      <td>CYNTHIA</td>\n",
+       "      <td>2982</td>\n",
+       "      <td>11/07/2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>Female</td>\n",
        "      <td>5</td>\n",
-       "      <td>Helen</td>\n",
-       "      <td>1910</td>\n",
-       "      <td>F</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>7</td>\n",
+       "      <td>LISA</td>\n",
+       "      <td>2839</td>\n",
+       "      <td>11/07/2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Id      Name  Year Gender State  Count\n",
-       "0   1      Mary  1910      F    AK     14\n",
-       "1   2     Annie  1910      F    AK     12\n",
-       "2   3      Anna  1910      F    AK     10\n",
-       "3   4  Margaret  1910      F    AK      8\n",
-       "4   5     Helen  1910      F    AK      7"
+       "   Year     Sex  Rank     Name  Count Data_Revision_Date\n",
+       "0  1960  Female     1    SUSAN   3299         11/07/2022\n",
+       "1  1960  Female     2     MARY   3248         11/07/2022\n",
+       "2  1960  Female     3    KAREN   3156         11/07/2022\n",
+       "3  1960  Female     4  CYNTHIA   2982         11/07/2022\n",
+       "4  1960  Female     5     LISA   2839         11/07/2022"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,28 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b39f3d73",
+   "execution_count": 6,
+   "id": "f92ccf4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2008    94970\n",
-       "2009    94609\n",
-       "2007    94332\n",
-       "2014    94148\n",
-       "2010    93307\n",
-       "        ...  \n",
-       "1914    28822\n",
-       "1913    25277\n",
-       "1912    23179\n",
-       "1911    17621\n",
-       "1910    16830\n",
-       "Name: Year, Length: 105, dtype: int64"
+       "1984    51\n",
+       "2015    51\n",
+       "2013    51\n",
+       "2021    50\n",
+       "2002    50\n",
+       "        ..\n",
+       "1969    50\n",
+       "1967    50\n",
+       "1965    50\n",
+       "1963    50\n",
+       "1960    50\n",
+       "Name: Year, Length: 62, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40101b7",
+   "id": "2858d4e5",
    "metadata": {},
    "source": [
     "# north west, south west, north east, south east"
@@ -166,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3f7871da",
+   "id": "def34254",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39dd6e09",
+   "id": "101d91bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3d8f9b1b",
+   "id": "5de62ebf",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "956c7460",
+   "id": "7f75e052",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "00a2a43a",
+   "id": "f46a8d8c",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542640b2",
+   "id": "d09196f3",
    "metadata": {},
    "outputs": [],
    "source": []
